--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "styled-components": "^6.1.11"
+    "react-dom": "^18.3.1"
   }
 }
